feat(auth): add validation and improve register/login handling