@@ -34,22 +34,24 @@ public class AuthService {
     public RegisterResponse register(RegisterRequest request){
         validateRegisterRequest(request);
 
+        String email = request.getEmail().trim().toLowerCase();
+
         //Kiểm tra email đã tồn tại
-        if(userRepository.findByEmail(request.getEmail()).isPresent()){
-            throw new BadRequestException("Email nay da duoc dang ky");
+        if(userRepository.findByEmail(email).isPresent()){
+            throw new BadRequestException("Email này đã được đăng ký");
 
         }
 
-        //Chuyển đổi dữ liệu từ Request sang Entity User
+        //Chuyển đổi dữ liệu từ Request sang Entity  User
         User user = new User();
-        user.setName(request.getName());
-        user.setEmail(request.getEmail());
+        user.setName(request.getName().trim());
+        user.setEmail(email);
         user.setPassword(passwordEncoder.encode(request.getPassword()));
         user.setAddress(request.getAddress());
-        user.setPhone(request.getPhone());
+        user.setPhone(request.getPhone().trim());
 
         Role customerRole = roleRepository.findByRoleName("ROLE_CUSTOMER")
-                        .orElseThrow(() -> new BadRequestException("Loi: Khong tim thay quyen CUSTOMER trong he thong!"));
+                        .orElseThrow(() -> new BadRequestException("Không tìm thấy ROLE_CUSTOMER"));
 
         user.setRole(customerRole);
 
@@ -69,55 +71,49 @@ public class AuthService {
     //Validate cho đăng ký
     private void validateRegisterRequest(RegisterRequest request){
         if (request == null){
-            throw new BadRequestException("Dữ liệu không hợp lệ");
+            throw new BadRequestException("Dữ liệu đăng ký không hợp lệ");
         }
 
-        if (request.getName() == null || request.getName().isBlank()){
-            throw new BadRequestException("Tên không được để trống");
+        if (request.getName() == null || request.getName().trim().isEmpty()){
+            throw new BadRequestException("Họ tên không được để trống");
         }
 
-        if (request.getEmail() == null || request.getEmail().isBlank()){
+        if (request.getEmail() == null || request.getEmail().trim().isEmpty()){
             throw new BadRequestException("Email không được để trống");
         }
 
         if(!request.getEmail().matches("^[A-Za-z0-9+_.-]+@[A-Za-z0-9.-]+$")){
-            throw new BadRequestException("Email không hợp lệ");
+            throw new BadRequestException("Email không đúng định dạng");
         }
 
         if(request.getPhone() == null ||!request.getPhone().matches("^\\d{10}$")){
-            throw new BadRequestException("SĐT phải là 10 số");
+            throw new BadRequestException("Số điện thoại phải gồm 10 chữ số");
         }
 
         if(request.getPassword() == null || request.getPassword().length() < 6){
-            throw new BadRequestException(("Password có ít nhất 6 kí tự"));
+            throw new BadRequestException(("Mật khẩu phải có ít nhất 6 kí tự"));
         }
 
-        if(!request.getPassword().equals(request.getConfirmPassword())){
+        if(request.getConfirmPassword() == null ||
+                !request.getPassword().equals(request.getConfirmPassword())){
             throw new BadRequestException(("Mật khẩu xác nhận không khớp"));
         }
 
     }
-
-    private void validateLoginRequest(LoginRequest request){
-        if (request == null ||
-            request.getEmail() == null || request.getEmail().isBlank() ||
-                request.getPassword() == null || request.getPassword().isBlank()){
-            throw new BadRequestException("Thiếu email hoặc password");
-        }
-    }
-
 
     // dang nhap Admin - dang nhap Customer
     public LoginResponse login (LoginRequest request){
 
         validateLoginRequest(request);
 
+        String email = request.getEmail().trim().toLowerCase();
+
         //b1: xác thực email + password
         authenticationManager.authenticate(
-                new UsernamePasswordAuthenticationToken(request.getEmail(), request.getPassword())
+                new UsernamePasswordAuthenticationToken(email, request.getPassword())
         );
         //b2: lấy user
-        User user = userRepository.findByEmail(request.getEmail())
+        User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new BadRequestException("Không tìm thấy user"));
 
         //b3: kiểm tra tài khoản có bị khóa không
@@ -128,11 +124,19 @@ public class AuthService {
         // b4. Tạo token
         String token = jwtUtil.generateToken(user.getEmail(), user.getRole().getRoleName());
 
-        // 5. Trả về thông tin cho Frontend
+        // b5. Trả về thông tin cho Frontend
         return new LoginResponse(
                 token,
                 user.getRole().getRoleName(),
                 user.getName());
+    }
+
+    private void validateLoginRequest(LoginRequest request){
+        if (request == null ||
+                request.getEmail() == null || request.getEmail().isBlank() ||
+                request.getPassword() == null || request.getPassword().isBlank()){
+            throw new BadRequestException("Vui lòng nhập đầy đủ thông tin đăng nhập");
+        }
     }
 
 }
